CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( rgbdslam ) 
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
SET( CMAKE_CXX_COMPILER "g++") 
SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin) 
SET( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib) 
SET( CMAKE_EXPORT_COMPILE_COMMANDS "ON")

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include)
LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib)

ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src)
