FIND_PACKAGE( PCL 1.2 REQUIRED)
FIND_PACKAGE( OpenCV REQUIRED )

ADD_DEFINITIONS( ${PCL_DEFINITIONS} )
INCLUDE_DIRECTORIES( ${PCL_INCLUDE_DIRS}  )
LINK_LIBRARIES( ${PCL_LIBRARY_DIRS} )

ADD_LIBRARY(PointCloud PointCloud.cpp)
TARGET_LINK_LIBRARIES(PointCloud ${OpenCV_LIBS} ${PCL_LIBRARIES} )

ADD_LIBRARY(FrameMatcher FrameMatcher.cpp)
TARGET_LINK_LIBRARIES(FrameMatcher ${OpenCV_LIBS} ${PCL_LIBRARIES} )

ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES(main FrameMatcher PointCloud ${OpenCV_LIBS} ${PCL_LIBRARIES} )

#ADD_EXECUTABLE(frameMatch frameMatch.cpp )
#TARGET_LINK_LIBRARIES(frameMatch ${OpenCV_LIBS})
