FIND_PACKAGE( PCL 1.2 REQUIRED)
FIND_PACKAGE( OpenCV REQUIRED )
LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules )
SET( G2O_ROOT /usr/local/include/g2o )
INCLUDE_DIRECTORIES( ${G2O_INCLUDE_DIR} ${CSPARSE_INCLUDE_DIR} )
LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules )
SET( G2O_ROOT /usr/local/include/g2o )
FIND_PACKAGE( G2O )
FIND_PACKAGE( CSparse )
INCLUDE_DIRECTORIES( ${G2O_INCLUDE_DIR} ${CSPARSE_INCLUDE_DIR} )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
ADD_DEFINITIONS( ${PCL_DEFINITIONS} )
INCLUDE_DIRECTORIES( ${PCL_INCLUDE_DIRS}  )
LINK_LIBRARIES( ${PCL_LIBRARY_DIRS} )

ADD_LIBRARY(PointCloud PointCloud.cpp)
TARGET_LINK_LIBRARIES(PointCloud ${OpenCV_LIBS} ${PCL_LIBRARIES} )

ADD_LIBRARY(FrameMatcher FrameMatcher.cpp)
TARGET_LINK_LIBRARIES(FrameMatcher ${OpenCV_LIBS} ${PCL_LIBRARIES} )

ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES(main FrameMatcher PointCloud ${OpenCV_LIBS} ${PCL_LIBRARIES}
    g2o_core g2o_types_slam3d g2o_solver_csparse g2o_stuff g2o_csparse_extension ${CSPARSE_LIBRARY})

ADD_EXECUTABLE(frameMatch frameMatch.cpp)
TARGET_LINK_LIBRARIES(frameMatch ${OpenCV_LIBS} ${PCL_LIBRARIES})

